--- a/app/src/main/res/layout/activity_task_list.xml
+++ b/app/src/main/res/layout/activity_task_list.xml
@@ -39,5 +39,18 @@
 
     </android.support.design.widget.CoordinatorLayout>
     <!--navigation drawer-->
-    <include layout="@layout/content_tag_list" />
+    <!--include layout="@layout/content_tag_list" /-->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/tag_list"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="left|start"
+        android:background="@color/colorPrimary"
+        tools:context=".activities.TaskListActivity"
+        tools:showIn="@layout/activity_task_list">
+
+    </android.support.v7.widget.RecyclerView>
 </android.support.v4.widget.DrawerLayout>
