--- a/app/src/main/res/layout/content_task_detail.xml
+++ b/app/src/main/res/layout/content_task_detail.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Name:"
-        android:id="@+id/textView"
+        android:id="@+id/nameTextView"
         android:singleLine="true" />
 
     <EditText
@@ -27,6 +27,20 @@
         android:layout_height="wrap_content"
         android:id="@+id/task_input_name"
          />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Tag:"
+        android:id="@+id/tagTextView"
+        android:singleLine="true" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/task_input_tag"
+        />
 
     <TextView
         android:layout_marginTop="24dp"
